--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "element-plus": "^2.2.32",
+    "sweetalert2": "^11.7.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
